unpackaged/main/default/objects/FSL_Service_Endpoints__c/FSL_Service_Endpoints__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Integration Service Settings for outbound calls to D3/Glympse.</description>
    <label>FSL Service Endpoints</label>
</CustomObject>