unpackaged/main/default/objects/FSL_Service_Endpoints__c/fields/Client_Cert_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Cert_Name__c</fullName>
    <label>Client Cert Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>