unpackaged/main/default/objects/FSL_Service_Endpoints__c/fields/Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_URL__c</fullName>
    <description>Endpoint for the outbound request, if client id and secret are provided. If not, refer to Named Credentials for endpoint details</description>
    <label>Endpoint URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>