unpackaged/main/default/objects/FSL_Service_Endpoints__c/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <label>Named Credential</label>
    <length>64</length>
    <type>Text</type>
</CustomField>